<resources>
    <string name="app_name">WEBTOON</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="webtoon_tab">웹툰</string>
    <string name="recommendedCompletion">추천완결</string>
    <string name="bestChallenge">베스트도전</string>
    <string name="my">MY</string>
    <string name="more">더보기</string>
</resources>